# NeurIPS_2022-Generative_Hyper_Representations

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
data/: download_data.sh
docs/: conf.py  index.rst
examples/: Load Pretrained Hyper-Representations.ipynb  Sample Hyper-Representations.ipynb  Train Hyper-Representations.ipynb
src/ghrp/: __init__.py  skeleton.py
src/ghrp/checkpoints_to_datasets/: README.md  __init__.py  dataset_auxiliaries.py  dataset_base.py  dataset_properties.py  dataset_simclr.py  map_to_canonical.py  permute_checkpoint.py  random_erasing.py
src/ghrp/model_definitions/: .gitignore  README.md  def_NN_experiment.py  def_NN_experiment_distillation.py  def_NN_experiment_from_checkpoint.py  def_net.py  def_net_distillation.py  def_simclr_ae_module.py  def_simclr_ae_trainable.py
src/ghrp/model_definitions/components/: def_AE.py  def_decoder_attn.py  def_encoder_attn.py  def_loss.py  def_perceiver.py  def_transformers.py
src/ghrp/model_definitions/downstream_tasks/: def_baseline_models.py  def_downstream_module.py
src/ghrp/sampling_auxiliaries/: sample_finetune_auxiliaries.py
tests/: conftest.py  test_skeleton.py
