[metadata]
name = NeurIPS_2022-Generative_Hyper_Representations
description = Code to reproduce the results from NeurIPS 2022 paper Hyper-Representations as Generative Models: Sampling Unseen Neural Network Weights.
author = Konstantin Schuerholt
author_email = konstantin.schuerholt@unisg.ch
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/HSG-AIML/NeurIPS_2022-Generative_Hyper_Representations
project_urls =
   Tracker = https://github.com/HSG-AIML/NeurIPS_2022-Generative_Hyper_Representations/issues

platforms = any

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

install_requires =
    importlib-metadata; python_version<"3.8"
    einops>=0.4.1
    GPUtil>=1.4.0
    h5py
    matplotlib
    tqdm
    torch>=1.9.0
    torchvision>=0.10.0
    pytorch-model-summary>=0.1.2
    ray>=1.13.0
    seaborn>=0.11.2
    umap-learn>=0.5.3
    pingouin>=0.5.1

[options.packages.find]
where = src
exclude =
    tests


testing =
    setuptools
    pytest
    pytest-cov

addopts =
    --cov ghrp --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = ghrp
